--- a/css.css
+++ b/css.css
@@ -2,6 +2,7 @@ body{
     background-color: black;
     color: #E0B7B7;
     text-align: center;
+    font-size: 30px;
 }
 
 .posiçao{
@@ -10,6 +11,12 @@ body{
    
 }
 
+.btn{
+    border: none;
+    width: 90px;
+    height: 30px;
+    font-size: 0.5em;
+}
 
 div#resposta{
     padding: 50px;
